--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "jquery": "^3.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1",
+    "react-scripts": "^3.3.1",
     "react-table": "^7.0.0-rc.15",
-    "react-table-6": "^6.11.0"
+    "react-table-6": "^6.11.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
