--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-table": "^7.0.0-rc.15",
     "react-table-6": "^6.11.0",
     "redux": "^4.0.5",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^6.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
